Set up super page as well as control center

--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "electron": "^3.0.9"
+    "electron": "^3.0.10",
+    "jquery": "^1.9.1",
+    "popper.js": "^1.14.5"
+  },
+  "devDependencies": {
+    "electron-reload": "^1.3.0"
   }
 }
